objects/AMAAP_Creative_Strategy__c.object
<CustomObject>
    <description>Automotive Marketing Association Account Plan Creative Strategy Detail. Lookup to Account Plan.</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_Plan__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Account_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>AMA Account Plan</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>AMAAP Creative Strategies</relationshipLabel>
        <relationshipName>AMAAP_Creative_Strategies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AMAAP Creative Strategies</relationshipLabel>
        <relationshipName>AMAAP_Creative_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick/GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Ad_Review_Link__c</fullName>
        <label>Display Ad Review Link</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Landing_Page_URL__c</fullName>
        <label>Landing Page URL</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Localization__c</fullName>
        <label>Localization</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <controllingField>Brand__c</controllingField>
            <picklistValues>
                <fullName>Acadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acadia Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avalanche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corvette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS-V Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS-V Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equinox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacrosse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malibu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500 Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500HD</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Editor_ID__c</fullName>
        <label>Offer Editor ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Model__c</fullName>
        <label>Offer Model</label>
        <picklist>
            <controllingField>Brand__c</controllingField>
            <picklistValues>
                <fullName>Avalanche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corvette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equinox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malibu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silverado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suburban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tahoe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traverse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acadia Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacrosse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500 Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500 Denali HD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Trim__c</fullName>
        <label>Offer Trim</label>
        <picklist>
            <controllingField>Brand__c</controllingField>
            <picklistValues>
                <fullName>ECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT - All Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT - Convertible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT - Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LS - Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT - Crew Cab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT - Extended Cab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT - Texas Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2LS - Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2LT - Convertible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2LT - Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2LT - Crew Cab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2LT - Extended Cab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>none</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1SN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLE-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double Cab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Types__c</fullName>
        <label>Offer Types</label>
        <picklist>
            <picklistValues>
                <fullName>APR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Years__c</fullName>
        <label>Offer Years</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In_Out__c</fullName>
        <label>Opt In/Out</label>
        <picklist>
            <picklistValues>
                <fullName>Opt In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Video_Ad_Review_Link__c</fullName>
        <label>Video Ad Review Link</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>WebID__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>AMAAP Creative Strategies</relationshipLabel>
        <relationshipName>AMAAP_Creative_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AMAAP Creative Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Plan__c</columns>
        <columns>Model__c</columns>
        <columns>Strategy__c</columns>
        <columns>Opt_In_Out__c</columns>
        <columns>Offer_Model__c</columns>
        <columns>Offer_Trim__c</columns>
        <columns>Offer_Types__c</columns>
        <columns>Display_Ad_Review_Link__c</columns>
        <columns>Landing_Page_URL__c</columns>
        <columns>Video_Ad_Review_Link__c</columns>
        <columns>Offer_Years__c</columns>
        <columns>Notes__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Creative Strategy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMAAP Creative Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>